<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Go4Lunch</string>
    <string name="API_KEY">AIzaSyCmCuR4ftEj9oX8rzFZfQI5K0QzgZAi2YA</string>

    <!-- FIRST SCREEN-->
    <string name="tittle_name_first_screen">Go4Lunch</string>
    <string name="tittle_sentence_name_first_screen">Find a nice restaurant and invite your co-workers for lunch!</string>
    <string name="title_activity_maps">Map</string>
    <string name="button_facebook_sign">Sign in with Facebook</string>
    <string name="button_google_sign">Sign in with Google</string>
    <string name="button_twitter_sign">Sign in with Twitter</string>
    <string name="error_unknown_error">Une erreur inconnue s\'est produite&#8230;</string>
    <string name="button_email_password">Email and Password</string>

    <!-- FACEBOOK PURPOSE -->
    <string name="facebook_application_id" translatable="false">515858332701600</string>
    <string name="facebook_login_protocol_scheme" translatable="false" tools:ignore="UnusedResources">fb515858332701600</string>

    <!-- BOTTOM NAVIGATION VIEW -->
    <string name="bottom_navigation_menu_mapView">MapView</string>
    <string name="bottom_navigation_menu_listView">ListView</string>
    <string name="bottom_navigation_menu_Workmates">Workmates</string>


    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="item_yourLunch">YOUR LUNCH</string>
    <string name="item_setting">SETTINGS</string>
    <string name="item_logout">LOGOUT</string>

    <!--DETAIL ACTIVITY-->
    <string name="button_call">CALL</string>
    <string name="button_like">LIKE</string>
    <string name="button_webSite">WEBSITE</string>
    <string name="no_phone">Phone number not found</string>
    <string name="no_web_site">Web site not found</string>
    <string name="add_to_favorites">Restaurant add to your favorite list</string>
    <string name="remove_to_favorites">Restaurant remove to your favorite list</string>
    <string name="you_changed_your_choice">"YOU CHANGED YOUR CHOICE"</string>


    <!--FRAGMENT HOLDER-->
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="opening_hour_not_available">opening hours not available</string>
    <string name="list_unit_distance">%1$sm</string>
    <string name="OpenNow">OpenNow</string>
    <string name="OpenUntil">OpenUntil</string>
    <string name="OpenAt">OpenAt</string>
    <string name="closing_soon">closing soon</string>


    <!-- NOTIFICATION WORKMANAGER -->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="notification_title">"Go4Lunch"</string>
    <string name="notification_message">you have a planned lunch at:  </string>

    <!-- TWITTER -->
    <string name="twitter_api_key" translatable="false">R1247489415326371840-8cwSQGaAyKQ0isKOOCC6WfMF2Ohp1C</string>
    <string name="twitter_api_secret" translatable="false">46eHsD5SQrxmdgY8JQtE7hEMtEaB1QGUTY86WjOkXyiBw</string>

    <!-- REGISTER -->
    <string name="input_error_email_invalid">enter a valid email!</string>
    <string name="Registered_Successfully">Registered Successfully</string>
    <string name="Please_enter_name">Please enter name!</string>
    <string name="Please_enter_email">Please enter email…</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="error">error_authentication_canceled</string>
    <string name="no_network">no_network</string>
    <string name="unknown_error">unknown_error</string>
    <string name="Already_Register">"Already Register ? Login Here"</string>


    <!-- HOLDER WORKMATES -->
    <string name="is_eating">is eating at:</string>
    <string name="no_choice">hasn\'t decided yet</string>

    <!-- AUTOCOMPLETE -->
    <string name="autocomplete_hint">"Restaurant"</string>

    <!-- HOLDER WORKMATESDETAIL -->
    <string name="is_joining">is joining</string>

    <!-- ALERT DIALOG -->
    <string name="titlle_alert">Are your sure you want to logout.</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="tittle_alert_Lunch">You haven\'t made your choice yet</string>
    <string name="tittle_autocomplete_result">this restaurant is outside the search area</string>


</resources>
