<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.AuthActivity"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_view_auth_layout_height"
            android:alpha="0.2"
            android:scaleType="centerCrop"
            android:src="@drawable/lunch"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="@dimen/auth_iv_layout_width"
            android:layout_height="@dimen/auth_iv_layout_height"
            android:layout_marginTop="@dimen/image_view_3_auth_margin_top"
            android:background="@drawable/ic_hot_food_in_a_bowl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />


        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/text_view_auth_layout_height"
            android:fontFamily="@font/aladin"
            android:text="@string/tittle_name_first_screen"
            android:textColor="@android:color/white"
            android:textSize="@dimen/default_tittle_size_first_screen"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aladin"
            android:gravity="center"
            android:text="@string/tittle_sentence_name_first_screen"
            android:textColor="@android:color/white"
            android:textSize="@dimen/default_tittle_sentence_first_screen"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <com.shaishavgandhi.loginbuttons.FacebookButton
            android:id="@+id/btnFb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/auth_button_margin_start"
            android:layout_marginTop="@dimen/auth_button_margin_top"
            android:layout_marginEnd="@dimen/auth_button_margin_end"
            android:text="@string/button_facebook_sign"
            app:iconSize="@dimen/auth_button_icon_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:roundedCorner="true"
            app:roundedCornerRadius="@dimen/auth_button_corner_radius" />

        <com.shaishavgandhi.loginbuttons.GooglePlusButton
            android:id="@+id/btnGG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/auth_button_margin_start"
            android:layout_marginTop="@dimen/auth_button_margin_top"
            android:layout_marginEnd="@dimen/auth_button_margin_end"
            android:text="@string/button_google_sign"
            app:iconSize="@dimen/auth_button_icon_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnFb"
            app:roundedCorner="true"
            app:roundedCornerRadius="@dimen/auth_button_corner_radius" />

        <com.shaishavgandhi.loginbuttons.TwitterButton
            android:id="@+id/btnTw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/auth_button_margin_start"
            android:layout_marginTop="@dimen/auth_button_margin_top"
            android:layout_marginEnd="@dimen/auth_button_margin_end"
            android:text="@string/button_twitter_sign"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnGG"
            app:roundedCorner="true"
            app:roundedCornerRadius="@dimen/auth_button_corner_radius" />

        <com.shaishavgandhi.loginbuttons.BaseButton
            android:id="@+id/btnLog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/auth_button_margin_start"
            android:layout_marginTop="@dimen/auth_button_margin_top"
            android:layout_marginEnd="@dimen/auth_button_margin_end"
            android:background="@drawable/button"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:text="@string/button_email_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnTw"
            tools:ignore="UnusedAttribute" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>